--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Github repo browser in Flight3",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start --single-run"
+    "test": "./node_modules/karma/bin/karma start --single-run",
+    "start": "node ./node_modules/webpack/bin/webpack.js && ./node_modules/http-server/bin/http-server ./"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,10 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-loader": "^0.4.5",
+    "http-server": "^0.10.0",
     "jasmine": "^2.6.0",
     "jasmine-core": "^2.6.4",
     "karma": "^1.7.0",
@@ -33,7 +36,7 @@
     "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "webpack": "^3.3.0"
+    "webpack": "^3.4.1"
   },
   "dependencies": {
     "PatchIt": "git+https://github.com/jsbuzz/PatchIt.git",
