--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/jsbuzz/github-repo-browser/issues"
   },
   "homepage": "https://github.com/jsbuzz/github-repo-browser#readme",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.18.0",
@@ -35,9 +35,7 @@
     "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "webpack": "^3.4.1"
-  },
-  "dependencies": {
+    "webpack": "^3.4.1",
     "PatchIt": "git+https://github.com/jsbuzz/PatchIt.git",
     "debounce": "^1.0.2",
     "framework-concept": "git+https://github.com/jsbuzz/framework-concept.git",
