--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "webpack": "^3.4.1",
-    "PatchIt": "git+https://github.com/jsbuzz/PatchIt.git",
+    "patchit": "git+https://github.com/jsbuzz/PatchIt.git",
     "debounce": "^1.0.2",
     "framework-concept": "git+https://github.com/jsbuzz/framework-concept.git",
     "flow-manager": "git+https://github.com/jsbuzz/3flight-flow-manager.git",
