--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-repo-browser",
   "version": "1.0.0",
-  "description": "Github repo browser in Flight3",
+  "description": "Github repo browser in Fiber",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/karma/bin/karma start --single-run",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jsbuzz/github-repo-browser.git"
+    "url": "git+https://github.com/fiberjs/github-repo-browser.git"
   },
   "author": "Matyas Buczko",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jsbuzz/github-repo-browser/issues"
+    "url": "https://github.com/fiberjs/github-repo-browser/issues"
   },
-  "homepage": "https://github.com/jsbuzz/github-repo-browser#readme",
+  "homepage": "https://github.com/fiberjs/github-repo-browser#readme",
   "dependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^7.1.1",
@@ -36,10 +36,10 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "webpack": "^3.4.1",
-    "patchit": "git+https://github.com/jsbuzz/PatchIt.git#38581a91bf72638c91d33c702711790924d9296f",
+    "patchit": "git+https://github.com/fiberjs/PatchIt.git",
     "debounce": "^1.0.2",
-    "framework-concept": "git+https://github.com/jsbuzz/framework-concept.git#8c49095bab501a3e02401ba0205d06d839a70518",
-    "flow-manager": "git+https://github.com/jsbuzz/3flight-flow-manager.git",
+    "fiber-framework": "git+https://github.com/fiberjs/fiber-framework.git",
+    "flow-manager": "git+https://github.com/fiberjs/flow-manager.git",
     "jquery": "^3.2.1",
     "marked": "^0.3.6"
   }
