--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "debounce": "^1.0.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "fiber-framework": "git+https://github.com/fiberjs/fiber-framework.git",
-    "flow-manager": "git+https://github.com/fiberjs/flow-manager.git",
+    "flow-manager": "git+https://github.com/fiberjs/flow-manager.git#d3a86321d68897e74fbdd6b435a30dbe43dc7032",
     "html-loader": "^0.4.5",
     "http-server": "^0.10.0",
     "jasmine": "^2.6.0",
